# bookkeeper-client-rust

./: Cargo.toml  README.md  TODO.md  build.rs
.github/workflows/: ci.yml
proto/: BookkeeperProtocol.proto  DataFormats.proto  DbLedgerStorageDataFormats.proto
src/: error.rs  future.rs  lib.rs  marker.rs  meta.rs  prelude.rs  proto.rs  utils.rs
src/client/: bookie.rs  cell.rs  entry_distribution.rs  errors.rs  local_rc.rs  metadata.rs  mod.rs  placement.rs  reader.rs  service_uri.rs  writer.rs
src/digest/: crc32.rs  crc32c.rs  dummy.rs  hmac.rs  mod.rs  traits.rs
src/meta/: etcd.rs  serde.rs  types.rs  util.rs  zookeeper.rs
tests/: client.rs
