[package]
name = "bookkeeper-client"
version = "0.0.1"
edition = "2021"
authors = ["Kezhu Wang <kezhuw@gmail.com>"]
description = "Async rust client for Apache BookKeeper"
documentation = "https://docs.rs/bookkeeper-client/"
license = "MIT"
keywords = ["BookKeeper"]
categories = ["api-bindings"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.52"
tokio = { version = "1.16.1", features = ["full"] }
tonic = "0.6.2"
prost = "0.9.0"
either = "1.6.1"
bytes = "1.1.0"
uuid = {version = "0.8.2", features = ["v4"]}
futures = "0.3.19"
rand = "0.8.4"
crc32fast = "1.3.0"
crc32c = "0.6.0"
sha-1 = "0.10.0"
hmac = "0.12.0"
lazy_static = "1.4.0"
ignore-result = "0.2.0"
compact_str = "0.2.0"
etcd-client = "0.8.2"
async-recursion = "1.0.0"
strum = { version = "0.23", features = ["derive"] }
zookeeper-client = "0.1.3"
const_format = "0.2.22"
log = "0.4.14"
static_assertions = "1.1.0"
guard = "0.5.1"

[dev-dependencies]
testcontainers = { git = "https://github.com/kezhuw/testcontainers-rs.git", branch = "bookkeeper-client-ci" }
pretty_assertions = "1.1.0"
hex = "0.4.3"

[build-dependencies]
tonic-build = "0.6.2"
