[package]
name = "bookkeeper-client"
version = "0.2.1"
edition = "2021"
authors = ["Kezhu Wang <kezhuw@gmail.com>"]
homepage = "https://github.com/kezhuw/bookkeeper-client-rust"
repository = "https://github.com/kezhuw/bookkeeper-client-rust"
description = "Async rust client for Apache BookKeeper"
documentation = "https://docs.rs/bookkeeper-client"
license = "MIT"
keywords = ["BookKeeper"]
categories = ["api-bindings"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.73"
tokio = { version = "1.32.0", features = ["full"] }
tonic = "0.9.2"
prost = "0.11.9"
either = "1.9.0"
bytes = "1.4.0"
uuid = {version = "1.4.1", features = ["v4"]}
futures = "0.3.28"
rand = "0.8.5"
crc32fast = "1.3.2"
crc32c = "0.6.4"
sha-1 = "0.10.1"
hmac = "0.12.1"
lazy_static = "1.4.0"
ignore-result = "0.2.0"
compact_str = "0.7.1"
etcd-client = "0.11.1"
async-recursion = "1.0.4"
strum = { version = "0.25", features = ["derive"] }
zookeeper-client = "0.6.1"
const_format = "0.2.31"
log = "0.4.20"
static_assertions = "1.1.0"
atomic = "0.6.0"
arc-swap = "1.6.0"
bytemuck = { version ="1.13.1", features =["derive"] }

[dev-dependencies]
testcontainers = { git = "https://github.com/kezhuw/testcontainers-rs.git", branch = "bookkeeper-client-ci" }
pretty_assertions = "1.4.0"
hex = "0.4.3"
test-log = "0.2.12"
env_logger = "0.10.0"

[build-dependencies]
tonic-build = "0.9.2"
